--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="topbar">
             <div class="left-section">
                 <div class="menu">
-                    <a href="#" class="steam"><img class="logo-small" src="img-logo's/steam-logo.png" alt="">Steam</a>
+                    <a href="#" class="steam"><img class="logo-small" src="img-logo_s/steam-logo.png" alt="">Steam</a>
                     <a href="#" class="view">View</a>
                     <a href="#">Friends</a>
                     <a href="#" class="games">Games</a>
@@ -54,10 +54,10 @@
                         <a href="#">Profile</a>
                     </div>
                 </div>
-                <div class="news"><img class="small-icons" src="img-icon's/megaphone.svg" alt=""></div>
-                <div class="notifications"><img class="small-icons" src="img-icon's/bell.svg" alt=""></div>
+                <div class="news"><img class="small-icons" src="img-icon_s/megaphone.svg" alt=""></div>
+                <div class="notifications"><img class="small-icons" src="img-icon_s/bell.svg" alt=""></div>
                 <div class="profile">
-                    <img class="" src="img-profile's/muckemannam-pfp.jpg" alt="">
+                    <img class="" src="img-profile_s/muckemannam-pfp.jpg" alt="">
                     <span class="profile-name">Muckemannen</span>
                     <span class="profile-money">0,67€</span>
                 </div>
@@ -91,3 +91,4 @@ document.addEventListener('click', () => {
 });
 </script> 
 </html>
+
