Fix HTML structure and update stylesheet paths

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steam</title>
     <link rel="shortcut icon" type="image/x-icon" href="img-logo's/steam-logo.png">
-    <link rel="stylesheet" href="topbar.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="bottombar.css">
+    <link rel="stylesheet" href="css/bottombar.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/topbar.css">
 </head>
 <body>
     <div class="container">
@@ -91,5 +91,6 @@ document.addEventListener('click', () => {
 });
 </script> 
 </html>
+
 
 
