--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steam</title>
+    <title>Steam NEGER</title>
     <link rel="shortcut icon" type="image/x-icon" href="img-logo's/steam-logo.png">
     <link rel="stylesheet" href="css/bottombar.css">
     <link rel="stylesheet" href="css/main.css">
