--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                     <div class="right-items">
                         <a href="#">News</a>
                         <a href="#">Notifications</a>
-                        <a href="#">Profile</a>
+                        <a href="steamprofil.html">Profile</a>
                     </div>
                 </div>
                 <div class="news"><img class="small-icons" src="img-icon_s/megaphone.svg" alt=""></div>
                 <div class="notifications"><img class="small-icons" src="img-icon_s/bell.svg" alt=""></div>
-                <div class="profile">
+                <div class="profile"><a href="steamprofil.html">
                     <img class="" src="img-profile_s/muckemannam-pfp.jpg" alt="">
                     <span class="profile-name">Muckemannen</span>
                     <span class="profile-money">0,67€</span>
-                </div>
+                </div></a>
             </div>
         </div>
         <div class="main">
