--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="#" class="store">Store</a>
                         <a href="#" class="active">Library</a>
                         <a href="#" class="community">Community</a>
-                        <a href="#" class="user">Muckemannen</a>
+                        <a href="steamprofil.html" class="user">Muckemannen</a>
                         <div class="tabs-dropdown">
                             <button class="dropdown-tabs">More</button>
                             <div class="tabs-items">
