--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 </div>
                 <div class="news"><img class="small-icons" src="img-icon_s/megaphone.svg" alt=""></div>
                 <div class="notifications"><img class="small-icons" src="img-icon_s/bell.svg" alt=""></div>
-                <div class="profile"><a class="no_decor" href="steamprofil.html">
+                <a class="profile" href="steamprofil.html">
                     <img class="" src="img-profile_s/muckemannam-pfp.jpg" alt="">
                     <span class="profile-name">Muckemannen</span>
                     <span class="profile-money">0,67€</span>
-                </div></a>
+                </a>
             </div>
         </div>
         <div class="main">
