--- a/index.html
+++ b/index.html
@@ -64,8 +64,22 @@
             </div>
         </div>
         <div class="main">
-            <div class="sidebar-left"></div>
-            <div class="main-content"></div>
+            <div class="sidebar-left">
+                <div class="home-outside">
+                    <div class="home">Home</div>
+                    <div class="home-options"></div>
+                </div>
+                <div class="sort-menu">
+                    <button class="sort-button"></button>
+                    <button class="back-top"></button>
+                    <div class="sort-time">O</div>
+                    <div class="sort-playable">></div>
+                </div>
+            </div>
+            <div class="main-content">
+                <div class="top-line"></div>
+                <div class="add-shelf">Add Shelf</div>
+            </div>
         </div>
         <div class="bottombar">
             <div class="bottom-left"><img src="" alt=""><a href="#">Add Games</a></div>
